feat: Add multicluster support for CEEMS API
* Major rewrite of the package to support multi clusters

* All CLI args are replaced by a dedicated config file

* HTTP client config has been inspired from Prometheus config

* Necessary DB migrations to add new columns for multi cluster support

* Persist admin users fetched from Grafana in DB

* Add API endpoint to list clusters in DB

* Refactor querier using generics

* Update test fixtures
